[resotoclient][feat] Support running in jupyterlite

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -153,7 +153,7 @@
     }
    ],
    "source": [
-    "rnb.search('\"foobar\"')"
+    "await rnb.search('\"foobar\"')"
    ]
   },
   {
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "rnb.cli_execute('search \"foobar\"')"
+    "await rnb.cli_execute('search \"foobar\"')"
    ]
   },
   {
@@ -267,7 +267,7 @@
     }
    ],
    "source": [
-    "rnb.search(\"is(instance)\").groupby([\"kind\"])[\"kind\"].count()"
+    "(await rnb.search(\"is(instance)\")).groupby([\"kind\"])[\"kind\"].count()"
    ]
   },
   {
@@ -351,7 +351,7 @@
     }
    ],
    "source": [
-    "rnb.cli_execute(\"search is(instance) | count kind\")"
+    "await rnb.cli_execute(\"search is(instance) | count kind\")"
    ]
   },
   {
@@ -623,7 +623,7 @@
     }
    ],
    "source": [
-    "rnb.search(\"is(digitalocean_droplet)\")"
+    "await rnb.search(\"is(digitalocean_droplet)\")"
    ]
   },
   {
@@ -893,7 +893,7 @@
     }
    ],
    "source": [
-    "rnb.cli_execute(\"search is(digitalocean_droplet)\")"
+    "await rnb.cli_execute(\"search is(digitalocean_droplet)\")"
    ]
   },
   {
@@ -928,7 +928,7 @@
     }
    ],
    "source": [
-    "render_svg(rnb.graph(\"is(cloud)\"))"
+    "render_svg(await rnb.graph(\"is(cloud)\"))"
    ]
   },
   {
@@ -952,7 +952,7 @@
     }
    ],
    "source": [
-    "render_png(rnb.graph(\"is(cloud) and name=do <-[0:1]->\"))"
+    "render_png(await rnb.graph(\"is(cloud) and name=digitalocean <-[0:1]->\"))"
    ]
   },
   {
@@ -2926,7 +2926,7 @@
    ],
    "source": [
     "import plotly.express as px\n",
-    "data = rnb.search(\"is(instance)\")\n",
+    "data = await rnb.search(\"is(instance)\")\n",
     "px.density_heatmap(data, x=\"account_id\", y=\"instance_cores\") "
    ]
   },
@@ -3065,7 +3065,7 @@
     }
    ],
    "source": [
-    "rnb.search(\"is(instance)\")[[\"instance_type\",\"instance_cores\", \"instance_memory\"]]"
+    "(await rnb.search(\"is(instance)\"))[[\"instance_type\",\"instance_cores\", \"instance_memory\"]]"
    ]
   },
   {
@@ -3177,7 +3177,7 @@
     }
    ],
    "source": [
-    "rnb.cli_execute(\"search is(instance) | list instance_type, instance_cores as cores, instance_memory as memory, /ancestors.account.reported.name as account\")"
+    "await rnb.cli_execute(\"search is(instance) | list instance_type, instance_cores as cores, instance_memory as memory, /ancestors.account.reported.name as account\")"
    ]
   },
   {
@@ -3301,7 +3301,7 @@
     }
    ],
    "source": [
-    "rnb.search(\"is(instance)\")[[\"id\", \"ctime\"]]"
+    "(await rnb.search(\"is(instance)\"))[[\"id\", \"ctime\"]]"
    ]
   },
   {
@@ -3413,7 +3413,7 @@
     }
    ],
    "source": [
-    "rnb.cli_execute('search is(instance) | list id, ctime')"
+    "await rnb.cli_execute('search is(instance) | list id, ctime')"
    ]
   },
   {
@@ -3453,7 +3453,8 @@
     }
    ],
    "source": [
-    "rnb.search(\"is(instance) and instance_cores > 2\")['id']"
+    "result = await rnb.search(\"is(instance) and instance_cores > 2\")\n",
+    "result['id']"
    ]
   },
   {
@@ -3491,7 +3492,7 @@
     }
    ],
    "source": [
-    "rnb.search(\"is(volume) and volume_status != in-use and volume_size > 10 and age > 30d\")['id']"
+    "(await rnb.search(\"is(volume) and volume_status != in-use and volume_size > 10 and age > 30d\"))['id']"
    ]
   },
   {
@@ -3543,7 +3544,8 @@
     }
    ],
    "source": [
-    "rnb.search(\"is(instance)\").groupby([\"account_id\"])[\"account_id\"].count()"
+    "result = await rnb.search(\"is(instance)\")\n",
+    "result.groupby([\"account_id\"])[\"account_id\"].count()"
    ]
   },
   {
@@ -3840,7 +3842,8 @@
     }
    ],
    "source": [
-    "rnb.search(\"is(instance) and instance_status == running\") \\\n",
+    "result = await rnb.search(\"is(instance) and instance_status == running\")\n",
+    "result \\\n",
     "    .groupby([\"cloud_id\", \"region_id\", \"instance_type\"], as_index=False)[[\"instance_cores\"]] \\\n",
     "    .sum()"
    ]
@@ -4145,7 +4148,7 @@
     "  /ancestors.region.reported.name as region,\n",
     "  instance_type as type: sum(instance_memory) as memory_bytes\n",
     "  \"\"\"\n",
-    "rnb.cli_execute(query)"
+    "await rnb.cli_execute(query)"
    ]
   },
   {
