--- a/examples/resoto_kubernetes.ipynb
+++ b/examples/resoto_kubernetes.ipynb
@@ -671,9 +671,9 @@
     }
    },
    "source": [
-    "### Add filter criteria\n",
+    "### Add filter criterion\n",
     "\n",
-    "Add filter criteria using `and` and `or`."
+    "Add filter criterion using `and` and `or`."
    ]
   },
   {
@@ -7865,7 +7865,7 @@
    },
    "source": [
     "1. Describe rule/alert you want to create. E.g. alert on pods that have been restarted very often.\n",
-    "2. Define a search criteria that matches the rule/alert.\n",
+    "2. Define a search criterion that matches the rule/alert.\n",
     "3. Send the result of a search to another system."
    ]
   },
